/**
 * This file is part of Totara Enterprise.
 *
 * Copyright (C) 2019 onwards Totara Learning Solutions LTD
 *
 * Totara Enterprise is provided only to Totara Learning Solutions
 * LTD’s customers and partners, pursuant to the terms and
 * conditions of a separate agreement with Totara Learning
 * Solutions LTD or its affiliate.
 *
 * If you do not have an agreement with Totara Learning Solutions
 * LTD, you may not access, use, modify, or distribute this software.
 * Please contact [sales@totaralearning.com] for more information.
 */

const TEST_IDS = {
  SITE_URL_INPUT: 'SITE_URL_INPUT',
  SUBMIT_URL: 'SUBMIT_URL',
  USER_INPUT: 'USER_INPUT',
  USER_PW: 'USER_PW',
  LOGIN: 'LOGIN',
  CLICK_CLOSE: 'CLICK_CLOSE',
  SITE_ERROR_MODAL: 'SITE_ERROR_MODAL',
  INCOMPATIBLE_API_MODAL: 'INCOMPATIBLE_API_MODAL',
  MESSAGE_ERROR_ID: 'MESSAGE_ERROR_ID',
  LOADING: 'LOADING',
  LOADING_ERROR: 'LOADING_ERROR',
  AUTHENTICATED_WEBVIEW: 'AUTHENTICATED_WEBVIEW'
};

const CL_TEST_IDS = {
  SWITCH: 'SWITCH',
  TAB_1: 'TAB_1',
  TAB_2: 'TAB_2',
  CAROUSEL_WRAPPER_ID: 'CAROUSEL_WRAPPER_ID',
  LIST: 'LIST',
  LEARNING_ITEM: 'LEARNING_ITEM_',
  CAROUSEL: 'CAROUSEL',
  LEARNING_DETAILS_SCROLL: 'LEARNING_DETAILS_SCROLL',
  PROGRESS: 'PROGRESS',
  MORE_INFO: 'MORE_INFO',
  COURSE_SET_SCROLL: 'COURSE_SET_SCROLL',
  COURSE_SET_ITEM: 'COURSE_SET_ITEM',
  ACTIVITY_SECTION: 'ACTIVITY_SECTION_',
  ACTIVITY: 'ACTIVITY_'
};

const TAB_TEST_IDS = {
  CURRENT_LEARNING: 'TAB_CURRENT_LEARNING',
  DOWNLOADS: 'TAB_DOWNLOADS',
  NOTIFICATIONS: 'TAB_NOTIFICATIONS',
  PROFILE: 'TAB_PROFILE',
  FIND_LEARNING: 'FIND_LEARNING'
};

const NAVIGATION_TEST_IDS = {
  BACK: 'NAVIGATION_BACK'
};

const PROFILE_TEST_IDS = {
  ABOUT: 'PROFILE_ABOUT',
  LOGOUT: 'PROFILE_LOGOUT'
};

const SCORM_TEST_IDS = {
  LOADING_ID: 'LOADING',
  SUMMARY_ID: 'SUMMARY',
  ATTEMPTS_LIST_ID: 'ATTEMPTS_LIST',
  ATTEMPT_ITEM_ID: 'ATTEMPT_ITEM',
  NONE_EXIST_RESOURCE_ID: 'NONE_EXIST_RESOURCE',
  INVALID_SCORM_ID: 'INVALID_SCORM',
  OFFLINE_PLAYER_ID: 'OFFLINE_PLAYER',
  ATTEMPT_FEEDBACK: 'ATTEMPT_FEEDBACK',
  INVALID_URL_ID: 'INVALID_URL',
  ONLINE_PLAYER_ID: 'ONLINE_PLAYER',
  NEW_ATTEMPT: 'NEW_ATTEMPT',
  LAST_ATTEMPT: 'LAST_ATTEMPT',
  DOWNLOAD: 'DOWNLOAD',
  BUTTON_VIEW_ATTEMPTS: 'BUTTON_VIEW_ATTEMPTS',
  FEEDBACK_CLOSE: 'FEEDBACK_CLOSE'
};

const RESOURCE_TEST_IDS = {
  DOWNLOADING: 'RESOURCE_DOWNLOADING',
  DOWNLOADED: 'RESOURCE_DOWNLOADED',
  DOWNLOAD: 'RESOURCE_DOWNLOAD'
};

const FINDLEARNING_TEST_IDS = {
  HEADER: 'HEADER',
  NO_OF_ITEMS: 'NO_OF_ITEMS',
  SEARCH_TEXT_INPUT: 'SEARCH_TEXT_INPUT',
  LEARNING_ITEM_TILE: 'LEARNING_ITEM_TILE'
};

const DESCRIPTIONCONTENT_TEST_IDS = {
  WEKA: 'WEKA',
  WEB: 'WEB',
  TEXT: 'TEXT'
};

const ADDITIONALACTION_TEST_IDS = {
  INFOR: 'INFOR',
  PRIMARY_BUTTON: 'PRIMARY_BUTTON',
  TERTIARY_BUTTON: 'TERTIARY_BUTTON'
};
const NATIVE_LOGIN_TEST_IDS = {
  UNHANDLED_ERROR: 'UNHANDLED_ERROR'
};

export {
  ADDITIONALACTION_TEST_IDS,
  CL_TEST_IDS,
  DESCRIPTIONCONTENT_TEST_IDS,
  FINDLEARNING_TEST_IDS,
  NATIVE_LOGIN_TEST_IDS,
  NAVIGATION_TEST_IDS,
  PROFILE_TEST_IDS,
  RESOURCE_TEST_IDS,
  SCORM_TEST_IDS,
  TAB_TEST_IDS,
  TEST_IDS
};
