{
  "general": {
    "loading": "Loading...",
    "error": "Error :",
    "enter": "Enter",
    "version": "Version",
    "try_again": "Try again",
    "cancel": "Cancel",
    "yes": "Yes",
    "error_unknown": "Something went wrong, please try again later.",
    "no_internet": "You are offline",
    "back": "Back",
    "ok": "Ok",
    "delete": "Delete",
    "copied_to_clipboard": "Copied to clipboard",
    "accessibility_go_back": "Go back",
    "done": "Done"
  },
  "learning_items": {
    "course": "Course",
    "program": "Program",
    "certification": "Certification",
    "playlist": "Playlist",
    "resource": "Resource",
    "engage_article": "Resource",
    "totara_playlist": "Playlist"
  },
  "site_url": {
    "title": "Get started.",
    "url_information": "Enter your organisation's URL",
    "url_text_placeholder": "URL",
    "validation": {
      "enter_valid_url": "Enter a valid site address"
    },
    "auth_invalid_site": {
      "title": "Sorry",
      "description": "The URL is not compatible. Please check the URL and try again.",
      "action_primary": "OK"
    }
  },
  "native_login": {
    "header_title": "Login",
    "login_information": "Enter your site username and password.",
    "username_text_placeholder": "Username",
    "password_text_placeholder": "Password",
    "forgot_username_password": "Forgot your username or password?",
    "error_unauthorized": "Oops! Your username or password is incorrect.",
    "validation": {
      "enter_valid_username": "Enter a valid username",
      "enter_valid_password": "Enter a valid password"
    },
    "auth_general_error": {
      "title": "Ooops!",
      "description": "Something went wrong",
      "action_primary": "OK"
    }
  },
  "no_internet_alert": {
    "title": "You are offline",
    "message": "To continue, you'll need to go online",
    "go_back": "OK"
  },
  "server_not_reachable": {
    "title": "Ooops!",
    "message": "The server is not reachable. Please check your network connection and try again.",
    "go_back": "OK"
  },
  "browser_login": {
    "title": "Authenticate",
    "description": "You need to login through a mobile browser to authenticate. Would you like us to take you there now?",
    "primary_title": "Yes, go to browser",
    "tertiary_title": "Cancel"
  },
  "current_learning": {
    "action_primary": "Current learning",
    "primary_info": {
      "zero": "You have no learning",
      "one": "You have {{count}} learning item to complete",
      "other": "You have {{count}} learning items to complete"
    },
    "no_learning_message": "No current learning",
    "find_learning": "Find learning",
    "restriction_view": {
      "title": "Sorry!",
      "description": "This course is not compatible with the mobile app. Would you like to access this course in the browser?",
      "primary_button_title": "Yes, go to browser",
      "tertiary_button_title": "Cancel"
    },
    "section_title_continue_learn": "Continue your learning",
    "due_in": "Due in",
    "extend_date": "Extend Date",
    "overdue_by": "Overdue by",
    "accessibility_view_mode": "{{mode}} view selected.",
    "carousel": "Carousel",
    "list": "List",
    "accessibility_view_mode_hint": "Toggles between carousel view and list view."
  },
  "additional_actions_modal": {
    "auth_model_title": "Action required",
    "auth_model_description": "You are required to visit a browser to complete some action(s).",
    "auth_model_go_to_browser": "Go to browser",
    "auth_model_logout": "Logout"
  },
  "general_error_feedback_modal": {
    "title": "Ooops!",
    "description": "Something went wrong",
    "action_primary": "Refresh",
    "action_tertiary": "Try in browser"
  },
  "content_error": {
    "title": "Not available",
    "description": "Please check your connection and try again"
  },
  "incompatible_api": {
    "title": "Sorry",
    "description": "The URL is not compatible with the mobile app. Would you like to try in browser?",
    "action_primary": "Yes, try in browser",
    "action_tertiary": "Logout",
    "action_tertiary_cancel": "Cancel"
  },
  "activity_not_available": {
    "title": "This activity is not available unless"
  },
  "course": {
    "course_overview": {
      "course_summary": "Course summary"
    },
    "progress": {
      "title": "Your progress"
    },
    "grade": {
      "title": "Your grade"
    },
    "mark_as_complete": {
      "title": "Mark as complete"
    },
    "course_complete": {
      "title": "Awesome!",
      "description": "You have successfully completed the course.",
      "button_title": "Continue learning"
    },
    "course_complete_confirmation": {
      "title": "Confirm",
      "description": "Are you sure you want to mark this course as complete?",
      "primary_button_title": "Mark as complete",
      "tertiary_button_title": "cancel"
    },
    "course_criteria": {
      "title": "Course criteria",
      "bottom_sheet_header": "This activity is not available unless"
    },
    "course_details": {
      "activities": "ACTIVITIES",
      "overview": "OVERVIEW",
      "expand_or_collapse": "Expand all",
      "accessibility_expand_all": "Expand all activities.",
      "accessibility_manual_completion": "Manual completion activity.",
      "accessibility_auto_completion": "Auto complete activity.",
      "accessibility_failed": "This activity completion is failed.",
      "accessibility_activity_unavailable": "This activity is not available."
    },
    "course_activity_section": {
      "not_available": "Not available"
    },
    "activity": {
      "accessibility_image": "Activity image",
      "accessibility_image_zoom": "Activity image zoom",
      "invalid_file_data": "Invalid file data"
    }
  },
  "course_group": {
    "tabs": {
      "overview": "OVERVIEW",
      "courses": "COURSES"
    },
    "overview": {
      "summary_title_program": "Program Summary",
      "summary_title_certification": "Certification Summary"
    },
    "courses": {
      "unavailable_sets": "unavailable set",
      "unavailable_course": "Unavailable course",
      "compete": "Successfully completed!",
      "current_learning_button_title": "Current Learning"
    },
    "criteria": {
      "view_criteria": "View criteria",
      "bottom_sheet_header": "This course is not available unless"
    }
  },
  "scorm": {
    "last_synced": "Last synced",
    "ago": "ago",
    "info_completed_attempts": "You have reached the maximum number of attempts",
    "info_upcoming_activity": "Sorry, this activity is not available until",
    "data_sync_error": "We could not sync your data. We will try again later.",
    "summary": {
      "summary": "Summary",
      "grade": {
        "title": "Grade details",
        "view_all": "View all",
        "method": "Grading method",
        "reported": "Grade reported",
        "in_attempt": "In attempt"
      },
      "attempt": {
        "title": "Attempt details",
        "total_attempts": "Total attempts allowed",
        "completed_attempts": "Total attempts done",
        "unlimited": "Unlimited"
      },
      "new_attempt": "New attempt",
      "last_attempt": "Last attempt"
    },
    "feedback": {
      "grade_title": "Grade {{score}}",
      "completed_attempt": "You have completed an attempt",
      "completed_attempt_with_grade": "You have completed an attempt with a grade"
    },
    "attempts": {
      "title": "All attempts grades",
      "attempt": "Attempt",
      "failed": "Failed",
      "passed": "Passed"
    },
    "grading_method": {
      "0": "Highest attempt",
      "1": "Average attempts",
      "2": "First attempt",
      "3": "Last completed attempt"
    },
    "confirmation": {
      "title": "Are you sure?",
      "message": "You want to exit the activity.",
      "ok": "Yes",
      "cancel": "No"
    }
  },
  "notifications": {
    "title": "Notifications",
    "empty": "No notifications yet!",
    "selected": "{{count}} Selected",
    "mark_as_read": "Mark as read",
    "tap_to_launch_hint": "Tap to open the notification details"
  },
  "downloads": {
    "title": "Downloads",
    "empty": "No downloads yet!",
    "selected": "{{count}} Selected",
    "accessibility_icon": "Download {{filename}}",
    "tap_to_launch_hint": "Tap to launch the activity"
  },
  "user_profile": {
    "title": "Profile",
    "login_as": "Logged in as: {{username}}",
    "manage_section": "Manage",
    "setting_cell": "Settings",
    "logout": {
      "button_text": "Logout",
      "title": "Log Out",
      "message_with_warn": "Are you sure you want to log out of this account? If you log out, you will lose your downloaded files."
    },
    "about": "About",
    "accessibility_image": "Profile image"
  },
  "about": {
    "version": "VERSION {{version}}",
    "site_url": "Site URL: {{url}}",
    "plugin_version": "Plugin version: {{version}}"
  },
  "find_learning": {
    "search": "Search",
    "title": "Find Learning",
    "results": {
      "one": "{{count}} result",
      "other": "{{count}} results"
    },
    "no_learning_items": "Learning catalogue is empty"
  },
  "find_learning_overview": {
    "overview": "Overview",
    "course": "Course",
    "go_to_course": "Go to course",
    "you_can_enrol": "You can enrol in this course",
    "you_are_enrolled": "You are enrolled in this course",
    "you_are_not_enrolled": "You are not enrolled in this course"
  },
  "enrolment_options": {
    "title": "Enrolment Options",
    "guest_access": "Guest access",
    "self_enrolment_title": "Self enrolment ({{roleName}})",
    "enrol_me": "Enrol me",
    "go_to_course": "Go to course",
    "password_required": "Password (required)",
    "enrolment_key": "Enrolment key (required)",
    "required": "Required",
    "loading_enrolment_data": "Loading enrolment data...",
    "loading_enrolment_error": "Error: Failed to load enrolment data. If this error persist please contact your site administrator"
  }
}